--- a/city-register/pom.xml
+++ b/city-register/pom.xml
@@ -17,14 +17,8 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.35</version>
+            <version>3.8.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
